fixed table overflow scroll style

--- a/_sass/partials/_schedule.scss
+++ b/_sass/partials/_schedule.scss
@@ -34,7 +34,7 @@
     width: 98%;
     max-width: 800px;
     border: 1px solid #ccc;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .schedule table tr {
